--- a/.babelrc
+++ b/.babelrc
@@ -9,5 +9,16 @@
     [
       "stage-0"
     ]
-  ]
+  ],
+  "env": {
+    "test": {
+      "presets": [
+        "es2015",
+        "stage-0"
+      ],
+      "plugins": [
+        "rewire"
+      ]
+    }
+  }
 }
