--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-plugin-external-helpers": "6.22.0",
+    "babel-plugin-rewire": "1.0.0",
     "babel-polyfill": "6.23.0",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-stage-0": "6.22.0",
@@ -43,7 +44,8 @@
     "rimraf": "2.6.1",
     "rollup": "0.41.4",
     "rollup-plugin-babel": "2.7.1",
-    "sinon": "1.17.7"
+    "sinon": "1.17.7",
+    "sinon-chai": "2.8.0"
   },
   "dependencies": {
     "debug": "2.6.1",
