--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "debug-composer",
-  "version": "0.3.1",
+  "version": "1.0.0",
   "description": "",
   "repository": {
     "type": "git",
@@ -48,7 +48,7 @@
     "sinon-chai": "2.8.0"
   },
   "dependencies": {
-    "debug": "2.6.3",
-    "lodash": "4.17.4"
+    "debug": "^2.6.3",
+    "lodash": "^4.17.4"
   }
 }
